# ghostinthearchive

./: .dockerignore  .env.example  .geminiignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.jobs  README.md  cloudbuild-pipelines.yaml  cloudbuild.yaml  curator_main.py  curator_server.py  docker-compose.yml  firebase.json  firestore.rules  main.py  package-lock.json  package.json  pipeline_server.py  podcast_main.py  pyproject.toml  requirements.txt  storage.rules  test_handover.py  theme_suggester_main.py  translate_main.py
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml
agents/: __init__.py  analyst.py  designer.py  historian.py  librarian.py  producer.py  publisher.py  scriptwriter.py  storyteller.py
alchemist_agents/: __main__.py  agent.py  cli.py
alchemist_agents/agents/: __init__.py  alchemist.py  alchemist_renderer.py  pipeline_gate.py
alchemist_agents/tools/: __init__.py  design_tools.py  firestore_tools.py  render_tools.py
archive_agents/: agent.py
archive_agents/agents/: __init__.py  curator.py  designer.py  historian.py  illustrator.py  librarian.py  publisher.py  scholar.py  storyteller.py  theme_suggester.py  visualizer.py
archive_agents/schemas/: __init__.py  document.py  mystery_id.py  mystery_report.py
archive_agents/tools/: __init__.py  chronicling_america.py  dpla.py  historian_tools.py  illustrator_tools.py  internet_archive.py  librarian_tools.py  loc_digital.py  nypl_digital.py  publisher_tools.py  scholar_tools.py  visualizer_tools.py
curator_agents/: __init__.py  __main__.py  cli.py  core.py  probe.py  queries.py  runner.py  schemas.py
curator_agents/agents/: __init__.py  curator.py
docs/: 手順.md
merch_agents/: __main__.py  agent.py  cli.py
merch_agents/agents/: alchemist_renderer.py
mystery_agents/: __main__.py  agent.py  cli.py
mystery_agents/agents/: __init__.py  aggregator.py  api_librarians.py  armchair_polymath.py  convergence_checker.py  cross_reference_scholar.py  dynamic_polymath_block.py  dynamic_scholar_block.py  illustrator.py  language_gate.py  language_librarians.py  language_scholars.py  librarian_instructions.py  multilingual_orchestrator.py  pipeline_gate.py  polymath_instructions.py  publisher.py  (+7 more)
podcast_agents/: __main__.py  agent.py  cli.py
schemas/: __init__.py  document.py  mystery_report.py
scripts/: check_images.py  deploy.sh  dev.sh  migrate_english_first.py  process_podcast_music.py  retranslate.py  seed-firestore.ts  tts_narration.py
services/: __init__.py  curator.py  mystery_pipeline.py  pipeline_server.py
shared/: api_coverage.py  constants.py  firestore.py  http_retry.py  keyword_translator.py  language_names.py  language_validator.py  logging_config.py  model_config.py  orchestrator.py  pipeline_failure.py  pipeline_run.py  search_metrics.py  state_keys.py  state_registry.py  token_tracker.py
terraform/: .terraform.lock.hcl  README.md  cloud-build.tf  cloud-run-jobs.tf  cloud-run.tf  dns.tf  iam.tf  iap.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  fakes.py
tools/: __init__.py  bilingual_search.py  chronicling_america.py  designer_tools.py  dpla.py  historian_tools.py  internet_archive.py  librarian_tools.py  loc_digital.py  nara_catalog.py  nypl_digital.py  publisher_tools.py
translator_agents/: __init__.py  agent.py
utils/: __init__.py
web/: .env.example  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
web-admin/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  cloudbuild.yaml  next.config.ts  package-lock.json  package.json  tsconfig.json
web-public/: .env.example  .env.production  cloudbuild.yaml  firebase.json  firestore.indexes.json  next.config.ts  package-lock.json  package.json  tsconfig.json
(+359 files in other folders)
