[project]
name = "ghostinthearchive"
version = "0.1.0"
description = "米公文書館から歴史的ミステリーを発掘し、物語・音声・プロダクトへと変換する自律型エージェントAIシステム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.1.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
