[project]
name = "ghostinthearchive"
version = "0.1.0"
description = "米公文書館から歴史的ミステリーを発掘し、物語・音声・プロダクトへと変換する自律型エージェントAIシステム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.1.0",
    "anthropic[vertex]>=0.43.0",
    "google-cloud-aiplatform>=1.60.0",

    "google-cloud-storage>=2.18.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "firebase-admin>=6.5.0",
    "Pillow>=10.0.0",
    "google-cloud-texttospeech>=2.16.0",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
    "freezegun>=1.5.0",
    "ruff>=0.5.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["mystery_agents*", "curator_agents*", "podcast_agents*", "shared*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring Firebase emulator",
    "adk_eval: marks ADK evaluation tests (require API keys)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"mystery_agents/cli.py" = ["E402"]
"curator_agents/cli.py" = ["E402"]
"podcast_agents/cli.py" = ["E402"]
"shared/firestore.py" = ["E402"]
"mystery_agents/tools/illustrator_tools.py" = ["E402"]
"tests/**" = ["E402"]

[tool.coverage.run]
source = ["mystery_agents", "curator_agents", "podcast_agents", "shared"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
